--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Our Team</title>
 </head>
+
 <body>
 
-    <div id="team-container"></div>
+    <h3>Our Team</h3>
+    <div class="p-container">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore autem exercitationem pariatur suscipit <br>
+            neque cupiditate, libero possimus ipsam illum? Ipsa quae praesentium excepturi similique obcaecati facilis
+            molestias earum harum non?</p>
+    </div>
+    <div id="team-container" class="card-container"></div>
 
- 
+    <div id="form-container" class="text-center mt-4">
+        <h4>ADD A NEW MEMBER</h4>
+        <form id="add-member-form">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="role">Role:</label>
+                <input type="text" class="form-control" id="role" required>
+            </div>
+            <div class="form-group">
+                <label for="image">Image:</label>
+                <input type="text" class="form-control" id="image" required>
+            </div>
+            <button type="submit" class="btn btn-light">Add</button>
+        </form>
+    </div>
+
+
 
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
